# zeitmaschine

./: .gitignore  .gitmodules  README.md  TODO.trl
src/: CMakeLists.txt  CMakeLists.txt~  DOC-architectural-blog.asciidoc.txt  DOC-story_test.txt  DOC-zeitmaschine.asciidoc.txt  FlowModel.h  flow2.ui  mainwindow.h  osal.cpp  osal.h  zeitmaschine.asciidoc.txt  zeitmaschine.ui  zm-python.i  zmChangeSet.h  zmCommon.h  zmGtdModel.cpp  zmGtdModel.h  zmModel.cpp  zmModel.h  zmOsal.cpp  zmQTreeWidget.h  zmQtGtdItem.cpp  zmQtGtdItem.h  zmQtGtdModel.cpp  zmQtGtdModel.h  zmQtUi.cpp  zmQtUi.h  zmThing.h  zmTool.cpp  zmTrace.h
src/asciitest_config/: asciidoc_template-python-2.txt
src/javaZm/: CMakeLists.txt  DOC-pyZm.asciidoc.txt  javaZm.i
src/mm_lib/: CMakeLists.txt  DOC-mindmatter.asciidoc.txt  zmChangeSet.cpp  zmCommon.cpp  zmModel.cpp  zmModel_affect_items.cpp  zmModel_persistence.cpp  zmOsal.cpp  zmThing.h  zmTrace.cpp
src/mm_lib/include/mm/: zmChangeSet.h  zmCommon.h  zmModel.h  zmModelData.h  zmOptions.h  zmOsal.h  zmThing.h  zmTrace.h  zmTypes.h
src/pyZm/: CMakeLists.txt  DOC-pyZm.asciidoc.txt  pyZm.i  test-pyZm.py
src/submodules/json-cpp-cmake/: CMakeLists.txt
src/test/: CMakeLists.txt  test_things.cpp  testing.h
src/test/common/: CMakeLists.txt  test_common.cpp
src/test/gtd/: CMakeLists.txt  test_gtd.cpp
src/test/header_dependency_check/: CMakeLists.txt  analyze_time_report.py  dummy.cpp  generate.sh
src/test/include/testing/: common.h
src/test/mindmatter/: CMakeLists.txt  test_mindmatter.cpp
src/zmAndroidClient/: .classpath  .gitignore  .project  AndroidManifest.xml  android.toolchain.cmake  run-cmake.sh
src/zmAndroidClient/res/layout/: flow_list_item.xml  main.xml
src/zmAndroidClient/res/menu/: main_menu.xml
src/zmAndroidClient/res/values/: strings.xml
src/zmAndroidClient/src/zm/client/android/: ZmActivity.java  ZmItem.java  ZmItemArrayAdapter.java
src/zmAndroidClient/src/zm/client/jni/: ChangeSet.java  JournalItem.java  MindMatterModel.java  SWIGTYPE_p_boost__shared_ptrT_zm__JournalItem_t.java  SWIGTYPE_p_std__listT_boost__shared_ptrT_zm__JournalItem_t_t.java  SWIGTYPE_p_std__pairT_std__string_int_t.java  SWIGTYPE_p_std__time_t.java  SWIGTYPE_p_std__vectorT_std__string_t.java  SWIGTYPE_p_zm__MindMatterModel__ModelData.java  StringVec.java  javaZm.java  javaZmJNI.java  zmGtdModel.java
src/zmQt/: CMakeLists.txt  zmQtGtdModel.cpp  zmQtGtdModel.h  zmQtMain.cpp  zmQtUi.cpp
src/zmQtListWidget/: CMakeLists.txt  main.cpp  mainwindow.h  zmQTreeWidget.h  zmQtGtdModel.cpp  zmQtGtdModel.h  zmQtListWidget.ui  zmQtMain.cpp  zmQtUi.cpp  zmQtUi.h  zmWidgetItemMap.h
src/zm_lib/: CMakeLists.txt  zmGtdModel.cpp
src/zm_lib/include/zm/: zmGtdModel.h
src/zm_tool/: CMakeLists.txt  zmTool.cpp
